<resources>

    <string name="app_name">HotelloApp</string>
    <string name="landing">Loading ...</string>
    <string name="loginas">Log In as</string>
    <string name="Service">Service Instructor</string>
    <string name="attendant">Customer Attendant</string>
    <string name="manage">Manager</string>
    <!--*/startpage*/-->
    <string name="Id">ID Number</string>
    <string name="Password">Your Pasword</string>
    <string name="Name">Name</string>
    <string name="signin">Sign In</string>
    <string name="back">Back</string>
    <!--*/loginAll*/-->
    <string name="menu">MENU</string>
    <string name="menuhead">MENU</string>
    <string name="action_order">ORDER</string>
    <string name="title_activity_chakula">ChakulaActivity</string>

    <string name="action_logout">LogOut</string>
    <string name="title_activity_manege">ManegeActivity</string>

    <!--attendant-->


    <string name="action_register">Register</string>
    <string name="action_logDetails">Order Report</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_attendant">AttendantActivity</string>
    <string name="tab_Menu">MENU</string>
    <string name="tab_Order">ORDER</string>

    <!--manager-->
    <string name="title_activity_manager">ManagerActivity</string>
    <string name="tab_text_1">Update Menu</string>
    <string name="tab_text_2">Manage User</string>
    <string name="tab_text_3">Order report</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--listview-->
    <string name="Price">Price</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="description">Description</string>
    <string name="telnumber">TEL No</string>
    <string name="income">Salary</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
