<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.UpdateMenu"
    android:background="#067491">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
android:background="#fff"
            android:id="@+id/databasemenulistView"
            android:layout_width="match_parent"
            android:layout_height="381dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="221dp" />

        <EditText
            android:background="@drawable/edit_layout"
            android:id="@+id/edName"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="9dp"
                      android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColorHint="#A07989" />

        <EditText
            android:id="@+id/edPrice"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="22dp"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/edit_layout"
            android:ems="10"
            android:hint="@string/Price"
            android:inputType="number"
            android:textColorHint="#A07989" />

        <EditText
            android:id="@+id/edDescription"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="107dp"
            android:background="@drawable/ed_rectangle"
            android:ems="10"
            android:textColor="#161313"
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:textColorHint="#A07989" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="185dp"
            android:background="@drawable/round_button"
            android:text="SUBMIT" />

    </RelativeLayout>

</FrameLayout>